<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UltimateFrisbeeStats</string>
    <string name="SaveText">saveText</string>
    <string name="SaveButton">Save Button</string>
    <string name="addContactButton">Add Contact</string>
        <string name="offense">Offense</string>
        <string name="turnOver">Turn</string>
        <string name="drop">Drop</string>
        <string name="badDecision">Bad Dec</string>
        <string name="gotooffense">Go To Offense</string>
        <string name="goToDynamicButtons">Go to dynamic buttons</string>
        <string name="readRosterFromFileB">Read Roster</string>
        <string name="startGameB">Start Game</string>
        <string name="Tournament">Tournament</string>
        <string name="Opponent">Opponent:</string>
        <string name="addPlayer">Add Player</string>
        <string name="startGame">Start Game</string>
        <string name="noPlayersYet">No Players Yet</string>
        <string name="GameLength">Game Length (in minutes):</string>
        <string name="DefaultGameLength">90</string>
        <string name="continuetournement">Continue Tournament</string>
        <string name="TournamentorLabel">Tournament/Label:</string>
        <string name="ok">OK</string>
        <string name="startGameorTournament">Start game or tournament</string>
        <string name="newPoint">New Point</string>
        <string name="setUpRoster">Set up roster</string>
        <string name="startOffensivePoint">Start Offensive Point</string>
        <string name="startDefensivePoint">Start Defensive Point</string>
        <string name="turnover">Turnover</string>
        <string name="defense">Defense</string>
        <string name="pointsInGame">Points in game:</string>
        <string name="defaultPoints">13</string>
        <string name="pointScored">Point Scored</string>
        <string name="clearOnField">Clear on field list</string>
        <string name="addPlayerFromContacts">Add player from contacts</string>
        <string name="addPlayerManually">Add player manually</string>
        <string name="playerName">Player name</string>
        <string name="playerNumber">Player number</string>
        <string name="ReadStats">Read Stats</string>
        <string name="restoreGame">Restore Game</string>
</resources>
