<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:layout_height="wrap_content" android:text="@string/ShowStatus" android:id="@+id/ShowStatusButton" android:layout_width="wrap_content"></Button>
<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:id="@+id/SaveText" android:text="@string/SaveText">
    <requestFocus></requestFocus>
</EditText>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/SaveButton" android:text="@string/SaveButton"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addContactButton" android:id="@+id/AddContactButton"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/GoToOffenseB" android:text="@string/gotooffense"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/goToDynamicButtons" android:text="@string/goToDynamicButtons"></Button>
<Spinner android:id="@+id/ContactsSpinner" android:layout_width="match_parent" android:layout_height="wrap_content"></Spinner>
</LinearLayout>
